crates/panache-parser/tests/snapshots/yaml__yaml_suite_FBC9.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: FBC9
input: "safe: a!\"#$%&'()*+,-./09:;<=>?@AZ[\\]^_`az{|}~\n     !\"#$%&'()*+,-./09:;<=>?@AZ[\\]^_`az{|}~\nsafe question mark: ?foo\nsafe colon: :foo\nsafe dash: -foo\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
