crates/panache-parser/tests/snapshots/yaml__yaml_suite_FH7J.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: FH7J
input: "- !!str\n-\n  !!null : a\n  b: !!str\n- !!str : !!null\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
