crates/panache-parser/tests/snapshots/yaml__yaml_suite_FP8R.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: FP8R
input: "--- >\nline1\nline2\nline3\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
