crates/panache-parser/tests/snapshots/yaml__yaml_suite_FQ7F.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: FQ7F
input: "- Mark McGwire\n- Sammy Sosa\n- Ken Griffey\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
