crates/panache-parser/tests/snapshots/yaml__yaml_suite_FRK4.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: FRK4
input: "{\n  ? foo :,\n  : bar,\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
