crates/panache-parser/tests/snapshots/yaml__yaml_suite_FTA2.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 279
expression: snapshot
---
case_id: FTA2
input: "--- &sequence\n- a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
