crates/panache-parser/tests/snapshots/yaml__yaml_suite_FUP4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: FUP4
input: "[a, [b, c]]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
