crates/panache-parser/tests/snapshots/yaml__yaml_suite_G5U8.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: G5U8
input: "---\n- [-, -]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_FLOW_CLOSER:unexpected flow closing token@11..12]
