crates/panache-parser/tests/snapshots/yaml__yaml_suite_G992.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: G992
input: ">\n folded\n text\n\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
